update: 添加英语翻译

--- a/main.html
+++ b/main.html
@@ -20,7 +20,8 @@
 
 
 
-    <h2> 你可以点击跳转到商店/ </h2>
+    <h2> 你可以点击图片跳转到商店 </h2>
+    <h2> You can click on the image to jump to GP</h2>
     <a href="https://play.google.com/store/apps/details?id=com.howego.cutcutwool">
         <img src="./images/cutcutwool/CutCutWoolIcon.png" alt="Cut Cut Wool" width="256" height="256">
     </a>
