添加 用户数据删除说明

--- a/main.html
+++ b/main.html
@@ -26,6 +26,10 @@
         <img src="./images/cutcutwool/CutCutWoolIcon.png" alt="Cut Cut Wool" width="256" height="256">
     </a>
 
+    <h2>用户数据删除说明 </h2>
+    <p> 卸载本地APP即可清除用户数据，玩家数据都是在本地的</p>
+    <p> Uninstalling the local APP clears user data, and player data is local</p>
+
 
 </body>
 
